# ros2_ws

./: .clang-format  .clangd  .gitignore  AGENTS.md  README.md
src/cpp_parameter_event_handler/: README.md  package.xml
src/cpp_parameter_event_handler/src/: parameter_event_handler.cpp
src/cpp_parameters/: CMakeLists.txt  README.md  package.xml
src/cpp_pubsub/: CMakeLists.txt  README.md  package.xml
src/cpp_srvcli/: CMakeLists.txt  README.md  package.xml
src/custom_action_cpp/: README.md  package.xml
src/custom_action_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
src/custom_action_interfaces/: CMakeLists.txt  README.md  package.xml
src/custom_action_py/: README.md  package.xml  setup.py
src/custom_action_py/custom_action_py/: fibonacci_action_client.py  fibonacci_action_server.py
src/more_interfaces/: CMakeLists.txt  README.md  package.xml
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_plugins/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/polygon_plugins/src/: area_node.cpp
src/py_async_node/: README.md  package.xml  setup.cfg  setup.py
src/py_async_node/py_async_node/: async_client.py  async_service.py
src/py_parameter_event_handler/: README.md  package.xml  setup.cfg  setup.py
src/py_parameter_event_handler/py_parameter_event_handler/: parameter_event_handler.py
src/py_parameters/: README.md  package.xml  setup.py
src/py_parameters/py_parameters/: py_parameters_node.py
src/py_pubsub/: README.md  package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
src/py_srvcli/: README.md  package.xml  setup.py
src/py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
src/tutorial_interfaces/: CMakeLists.txt  README.md  package.xml
src/tutorial_interfaces_test_cpp/: CMakeLists.txt  package.xml
